--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <h3>Ali Mohamed</h3>
                 <p>Brings exceptional marketing skills to the team alongside data science and analysis.</p>
-                <a href="portfolio4.html" class="btn">View Portfolio</a>
+                <a href="https://aliiimohamedaliii.github.io/My-portfolio/" class="btn">View Portfolio</a>
             </div>
         </div>
     </section>
