--- a/Abdelrahman.html
+++ b/Abdelrahman.html
@@ -33,7 +33,7 @@
     <!--Home section-->
     <section class="home active">
         <div class="home-detail">
-            <h1>Abdelrahman Mahmout</h1>
+            <h1>Abdelrahman Mahmoud</h1>
             <h2>I'm a
                 <span style="--i: 4;" data-text="Data Scientist">Data Scientist</span>
                 <span style="--i: 3;" data-text="Data Analyst">Data Analyst</span>
